--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -5,13 +5,14 @@ product-info {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  overflow: hidden;
 }
 .sp-product-zoom-container .product-modal-thumbnails {
   display: flex !important;
   overflow: hidden;
   gap: 0.5rem;
 }
-button.product-modal-nav-button {
+.sp-product-zoom-media button.product-modal-nav-button {
   border: none;
   --tw-shadow: 0px 1px 11px 0px #c8c2c2;
   --tw-shadow-colored: 0px 1px 11px 0px var(--tw-shadow-color);
@@ -23,6 +24,7 @@ button.product-modal-nav-button {
   justify-content: center;
   align-items: center;
   aspect-ratio: 1;
+  margin: 0 10px;
 }
 .sp-product-zoom-container button.product-modal-thumbnail.media-fit-cover {
   border: 0;
