--- a/snippets/star-rating.liquid
+++ b/snippets/star-rating.liquid
@@ -25,7 +25,7 @@
   }
 </style>
 <!-- javascript for total rating -->
-<script
+{% comment %} <script
   defer
 >
             
@@ -41,4 +41,4 @@
           })
                 
         });
-</script>
+</script> {% endcomment %}
